--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -34,5 +34,8 @@
             <div class="col">
                 <button type="button" class="btn btn-success" (click)="dividirNumeros();">División</button>
             </div>
+            <div class="col">
+                <button type="button" class="btn btn-warning" (click)="iniciarCampos();">Limpiar</button>
+            </div>
       </div>
 </div>
